Add graph statuses, finish Oppo diagram

--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -419,7 +419,9 @@ timeline:
 graphing:
   coordinate-system: polar
   defs:
-    thunder: "linear-gradient(0 #ABFFFC 10% #3F8DFB 80% #3F8DFB 100% #ABFFFC)"
+    thunder-gradient: "linear-gradient(0 #ABFFFC 10% #3F8DFB 80% #3F8DFB 100% #ABFFFC)"
+    sphere-gradient: "radial-gradient(at 41% 41%, 0% #CC85FB 100% #623D93)"
+    tower-gradient: "radial-gradient(82% #d9d9d966 82% #1a1a1a)"
   elements:
     arena:
       type: image
@@ -431,7 +433,7 @@ graphing:
       type: rectangle
       size: [50, 100]
       scale: [1, 0]
-      color: "url(#thunder)"
+      color: "url(#thunder-gradient)"
       opacity: 0.5
       origin: [0.5, 0]
     thunder-s:
@@ -439,7 +441,7 @@ graphing:
       type: rectangle
       size: [28, 100]
       scale: [1, 0]
-      color: "url(#thunder)"
+      color: "url(#thunder-gradient)"
       opacity: 0.5
       origin: [0.5, 0]
     ice-l:
@@ -452,6 +454,12 @@ graphing:
       size: [126, 200]
       color: "#ffffff"
       opacity: 0
+    icemeld:
+      type: ellipse
+      size: 180
+      color: "#a6ddf5"
+      opacity: 0.8
+      scale: 0
     pyre:
       type: ellipse
       size: 120
@@ -464,6 +472,24 @@ graphing:
       depth: 3
       origin: [0.5, 0]
       color: "#CCEEEE"
+      opacity: 0.8
+    orb:
+      type: ellipse
+      size: 8
+      color: "url(#sphere-gradient)"
+      opacity: 0.85
+    tower:
+      type: ellipse
+      size: 25
+      color: "url(#tower-gradient)"
+      opacity: 0.7
+      scale: 0
+    shock:
+      type: ellipse
+      size: 40
+      color: "#6447f5"
+      opacity: 0.7
+      scale: 0
   graphs:
     dualspell-thunder-l:
       - thunder-l#1: [0, 0, 0]
@@ -594,7 +620,17 @@ graphing:
         pyre#4: { scale: 0.6 }
         ice-l: { opacity: 0.5 }
     oppo:
-      - T1: [50, 0]
+      - ice-wall#ne: [85, 45, 45]
+        ice-wall#nw: [85, -45, -45]
+        tower#ne: [75, 45]
+        tower#nw: [75, -45]
+        tower#se: [75, 135]
+        tower#sw: [75, -135]
+        orb#ne: [40, 45]
+        orb#nw: [40, -45]
+        orb#se: [40, 135]
+        orb#sw: [40, -135]
+        T1: [50, 0]
         T2: [50, 180]
         H1: [50, -90]
         H2: [50, 90]
@@ -602,7 +638,129 @@ graphing:
         M2: [50, 135]
         R1: [50, -45]
         R2: [50, 45]
-        ice-wall#ne: [85, 45, 45]
-        ice-wall#nw: [85, -45, -45]
+        boss: [0, 0]
+        pyre#s: [80, 180]
+        pyre#e: [80, 90]
+        pyre#n: [80, 0]
+        pyre#w: [80, -90]
+        icemeld#ne: [80, 45]
+        icemeld#nw: [80, -45]
+        icemeld#se: [80, 135]
+        icemeld#sw: [80, -135]
+        shock#ne: [75, 45]
+        shock#nw: [75, -45]
+        shock#se: [75, 135]
+        shock#sw: [75, -135]
         ice-wall#se: [85, 135, -45]
         ice-wall#sw: [85, -135, 45]
+      - orb#ne: { status: [dice-1] }
+        orb#nw: { status: [dice-3] }
+        orb#sw: { status: [dice-5] }
+        orb#se: { status: [dice-7] }
+        M1: { status: [dice-2] }
+        H1: { status: [dice-4] }
+        R2: { status: [dice-6] }
+        H2: { status: [dice-8] }
+      - T1: [77, 43]
+        T2: [70, 45]
+        M2: [70, 49]
+        R1: [77, 52]
+        H1: [48, -128]
+        H2: [48, -140]
+        M1: [80, 180]
+        R2: [48, -115]
+      - M2: { status: [jump] }
+      - T1: [77, -43]
+        T2: [70, -45]
+        M2: [80, 45]
+        R1: [77, -52]
+        boss: { opacity: 0 }
+      # turn 1
+      - boss: { pos: [60, 45], rotate: 45, opacity: 0.5 }
+        T2: { status: [jump] }
+      - orb#ne: { pos: [80, -135], opacity: 0 }
+        shock#sw: { scale: 1 }
+        T2: [80, -45]
+        T1: [68, -90]
+        R1: [77, -90]
+      - boss: [65, 180, 15]
+        pyre#s: { scale: 0.6 }
+        tower#sw: { scale: 1 }
+        R2: [75, -135]
+        shock#sw: { opacity: 0 }
+        icemeld#ne: { scale: 1 }
+        M2: { status: [] }
+      - tower#sw: { opacity: 0 }
+        icemeld#ne: { opacity: 0 }
+        pyre#s: { opacity: 0 }
+        boss: { opacity: 0 }
+        H1: [80, 90]
+        H2: [48, 145]
+        M1: [45, 134]
+        M2: [45, 120]
+        R2: [44, 155]
+        T1: [68, -135]
+        R1: [77, -135]
+      # turn 2
+      - boss: { pos: [60, -45], rotate: -45, opacity: 0.5 }
+        R1: { status: [jump] }
+      - orb#nw: { pos: [80, 135], opacity: 0 }
+        shock#se: { scale: 1 }
+        R1: [80, -135]
+        T1: [68, 180]
+      - boss: [65, 90, -75]
+        pyre#e: { scale: 0.6 }
+        tower#se: { scale: 1 }
+        H2: [75, 135]
+        shock#se: { opacity: 0 }
+        icemeld#nw: { scale: 1 }
+        T2: { status: [] }
+      - tower#se: { opacity: 0 }
+        icemeld#nw: { opacity: 0 }
+        pyre#e: { opacity: 0 }
+        boss: { opacity: 0 }
+        T2: [48, 45]
+        H1: [40, 52]
+        H2: [48, 45]
+        M1: [48, 52]
+        M2: [40, 40]
+        R2: [80, 0]
+        T1: [80, 135]
+      # turn 3
+      - boss: { pos: [60, -135], rotate: -135, opacity: 0.5 }
+        T1: { status: [jump] }
+      - orb#sw: { pos: [80, 45], opacity: 0 }
+        shock#ne: { scale: 1 }
+      - boss: [65, 0, -165]
+        pyre#n: { scale: 0.6 }
+        tower#ne: { scale: 1 }
+        M1: [75, 45]
+        shock#ne: { opacity: 0 }
+        icemeld#sw: { scale: 1 }
+        R1: { status: [] }
+      - tower#ne: { opacity: 0 }
+        icemeld#sw: { opacity: 0 }
+        pyre#n: { opacity: 0 }
+        boss: { opacity: 0 }
+        T2: [48, -45]
+        H1: [40, -52]
+        M1: [48, -52]
+        M2: [40, -45]
+        R1: [44, -36]
+        R2: [38, -40]
+        H2: [80, -90]
+      # turn 4
+      - boss: { pos: [60, 135], rotate: 135, opacity: 0.5 }
+      - orb#se: { pos: [80, -45], opacity: 0 }
+        shock#nw: { scale: 1 }
+      - boss: [65, -90, 105]
+        pyre#w: { scale: 0.6 }
+        tower#nw: { scale: 1 }
+        H1: [75, -45]
+        shock#nw: { opacity: 0 }
+        icemeld#se: { scale: 1 }
+        T1: { status: [] }
+      - tower#nw: { opacity: 0 }
+        icemeld#se: { opacity: 0 }
+        pyre#w: { opacity: 0 }
+        boss: { pos: [0, 0], rotate: 0, opacity: 1 }
