--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -49,22 +49,26 @@ actions:
     attack: raidwide
     type: magic
     damage: 65000
+    fade: true
   33051:  # Soul Surge
     description: The raidwide executed at the end of [a:33048].
     attack: raidwide
     type: magic
     damage: 65000
+    fade: true
   33100:  # Gluttony's Augur
     description: Heavy raidwide damage.
     attack: raidwide
     type: magic
     damage: 80000
+    fade: true
   33105:  # Duality of Death
     description: "[boss] channels wind and fire, then hits the highest enmity player with [a:33106] (inflicting [s:2098]) and the second-highest enmity player with [a:33107] (inflicting [s:2096]). It executes this attack twice in quick succession. Due to the elemental vulnerabilities inflicted, this attack necessitates a tankswap."
     attack: tb
     target: MTOT
     type: magic
     damage: 75000
+    fade: true
   33106:  # Fire IV
     description: One half of the two-part tankbuster executed during [a:33105]. Inflicts [s:2098], preventing players from taking two of these in succession.
     attack: tb
@@ -141,15 +145,18 @@ actions:
     target: healers
     type: magic
     damage: 74000
+    fade: true
   33135:  # Ascendant Fist
     description: "[boss] uppercuts the main target, dealing heavy damage and applying both [s:2944] and [s:2940]. The latter forces a tankswap, as [boss]'s auto-attacks are physical in this phase."
     attack: tb
     target: MT
     type: physical
     damage: 128000
+    fade: true
   33136:  # Charybdis
     description: Summons four tornados on the four cardinals of the arena. Stepping into one applies [s:3706].
     attack: mech
+    fade: true
   33138:  # Comet
     description: Places four comets on the intercardinals of the arena, between the tornadoes. Two of them will start out cracked. Each impact site will deal a moderate amount of proximity damage, so the party should stack in the center of the arena.
       After they have spawned, two comets will appear whole, while two will appear cracked. If a comet takes any damage during this phase, its health state will be reduced by one (to "cracked" or, if it's already cracked, destroyed). The two "whole" comets must not take any damage during this phase, or a wipe is guaranteed.
@@ -161,6 +168,7 @@ actions:
     attack: proximity
     type: magic
     damage: 19000
+    fade: true
   33140:  # Burst
     description: Happens after a [a:33138] is reduced to 0 health states. After a short delay it explodes, dealing huge damage to everything around it. Note that, if the comet is reduced *below* zero health states before it can complete [a:33140] (such as when [a:33141] hits an already damaged comet), it will *skip* [a:33140] and explode immediately. This will not deal any damage, but will prevent players from using damaged comets for cover during [a:33141].
     attack: chariot
@@ -187,6 +195,7 @@ actions:
   33148:  # Levinstrike Summoning
     description: Summons four thunder orbs in front of the four ice walls. These will become relevant during [a:33149].
     attack: mech
+    fade: true
   33149:  # Scrambled Succession
     description: |
       Odd numbers (1, 3, 5, 7) will appear above the orbs, while even numbers (2, 4, 6, 8) will appear above four random players. After the cast resolves, the boss becomes untargetable and several things will happen in sequence.
@@ -239,6 +248,7 @@ actions:
     description: Raidwide inflicting moderate damage.
     attack: raidwide
     type: magic
+    fade: true
   33162:  # Disintegration
     description: Instantly kills all players.
     damage: 9999999
@@ -262,6 +272,7 @@ actions:
     description: Executes the previously stored [a:33129] or [a:33130]. Note that this does *not* inflict [s:2911] but *does* inflict [s:2944]. This means that it is better to be hit by this than by [a:33336] or [a:33337].
     attack: cleave
     type: physical
+    fade: true
   33336:  # Inside Roundhouse
     description: A [t:chariot] centered on the boss, leaving only the outside of the arena safe. Being hit by this inflicts [s:2911].
     attack: chariot
@@ -325,14 +336,25 @@ timeline:
     phase: Martialist Phase
   - at: 140805
     id: 33119
-  - at: 148959
-    id: [33130, 33129]
-  - at: 155233
-    id: [33336, 33337]
-  - at: 158352
-    id: 33315
-  - at: 161249
-    id: [33337, 33336]
+    children-minimal: true
+    children:
+    - at: 148959
+      id: 33130
+      link: or
+    - at: 148959
+      id: 33129
+    - at: 155233
+      id: 33336
+      link: or
+    - at: 155233
+      id: 33337
+    - at: 158352
+      id: 33315
+    - at: 161249
+      id: 33337
+      link: or
+    - at: 161249
+      id: 33336
   - at: 164325
     id: 33133
   - at: 170468
@@ -358,20 +380,21 @@ timeline:
     phase: Beast Phase
   - at: 304596
     id: 33138
-  - at: 313734
-    id: 33143
-  - at: 320865
-    id: 33145
-  - at: 326513
-    id: 33140
-  - at: 327003
-    id: 33145
-  - at: 332488
-    id: 33140
-  - at: 334181
-    id: 33141
-  - at: 343269
-    id: 33140
+    children:
+    - at: 313734
+      id: 33143
+    - at: 320865
+      id: 33145
+    - at: 326513
+      id: 33140
+    - at: 327003
+      id: 33145
+    - at: 332488
+      id: 33140
+    - at: 334181
+      id: 33141
+    - at: 343269
+      id: 33140
   - at: 349680
     id: 33158
   - at: 369944
@@ -392,7 +415,10 @@ timeline:
   - at: 433348
     id: 33211
   - at: 445825
-    id: [34702, 34703]
+    id: 34702
+    link: or
+  - at: 445825
+    id: 34703
   - at: 456307
     id: 33315
   - at: 462852
