--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -45,40 +45,43 @@ actions:
   19148:  # Ravensclaw (for reference)
     description: "A mechanic from <a href=\"/extremes/cinder-drift/\">Cinder Drift</a> wherein Ruby Weapon plunges its claw into the ground and spawns eight cracks in the ground with lights traveling alongside them. Once they reach the end of the crack, the lights explode in a small [t:chariot] [t:AoE]."
   33048:  # Ravening
-    description: "[boss] consumes a soul and absorbs its power, changing its form to either [s:3542], [s:3543], [s:3544], or [s:3545]. At the end of the animation, [boss] executes [a:33051], inflicting heavy raidwide damage."
-    attack: raidwide
+    description: |
+      [boss] consumes a soul and absorbs its power, changing its form to either [s:3542], [s:3543], [s:3544], or [s:3545]. At the end of the animation, [boss] executes [a:33051], inflicting heavy raidwide damage.
+      In [s:3542], [boss]'s auto-attacks and abilities are magical, and his trademark abilities are [a:33108] and [a:33157].
+      In [s:3543], [boss]'s auto-attacks are physical, and his abilities are primarily physical and earth-aspected magic. In this form, his trademark abilities are [a:33119] and [a:33315].
+      In [s:3544], [boss]'s auto-attacks are physical. Likened to a behemoth, he only executes the [a:33136] into [a:33141] combo here.
+      In [s:3545], [boss] combines both the aspects of [s:3542] and [s:3543] and can cast abilities from either form. In this form, his trademark abilities are the [t:limit cut] mechanics [a:33149] and [a:33211].
+    variations: [raidwide]
     type: magic
     damage: 65000
     fade: true
   33051:  # Soul Surge
     description: The raidwide executed at the end of [a:33048].
-    attack: raidwide
+    variations: [raidwide]
     type: magic
     damage: 65000
     fade: true
   33100:  # Gluttony's Augur
     description: Heavy raidwide damage.
-    attack: raidwide
+    variations: [raidwide]
     type: magic
     damage: 80000
     fade: true
   33105:  # Duality of Death
     description: "[boss] channels wind and fire, then hits the highest enmity player with [a:33106] (inflicting [s:2098]) and the second-highest enmity player with [a:33107] (inflicting [s:2096]). It executes this attack twice in quick succession. Due to the elemental vulnerabilities inflicted, this attack necessitates a tankswap."
-    attack: tb
-    target: MTOT
+    minimal-description: "[boss] hits both tanks twice for high damage, requiring a tankswap in-between the hits."
+    variations: [tb on MTOT]
     type: magic
     damage: 75000
     fade: true
   33106:  # Fire IV
     description: One half of the two-part tankbuster executed during [a:33105]. Inflicts [s:2098], preventing players from taking two of these in succession.
-    attack: tb
-    target: OT
+    variations: [tb on OT]
     type: magic
     damage: 75000
   33107:  # Aero IV
     description: One half of the two-part tankbuster executed during [a:33105]. Inflicts [s:2096], preventing players from taking two of these in succession.
-    attack: tb
-    target: OT
+    variations: [tb on OT]
     type: magic
     damage: 75000
   33108:  # Dualspell
@@ -87,8 +90,7 @@ actions:
       **Fire**: all 4 players of one role (either all DPS or all tanks and healers) are targeted with [a:33110], a fire pillar that must be shared by at least one other player and inflicts [s:2098], preventing players from being hit by more than one [a:33110].
       **Lightning**: all 8 players are targeted with [a:33114], a lightning-aspected line [t:AoE] that inflicts [s:2095], preventing players from being clipped by a line other than their own.
       **Ice**: A giant [t:dynamo] [t:AoE] originating from the center of the arena.
-    attack: [stack, spread]
-    target: [roles, raid]
+    variations: [stack on roles, spread on raid]
     type: magic
     strategies:
       dualspell-thunder-l:
@@ -105,14 +107,12 @@ actions:
         description: Ice will flash on the screen, requiring partner stacks on the inside of either the cardinals or intercardinals.
   33110:  # Pile Pyre
     description: The stack [t:chariot] fired during the fire variant of [a:33108] or [a:33157].
-    attack: stack
-    target: roles
+    variations: [stack on roles]
     type: magic
     damage: 57000
   33114:  # Thunder III
     description: The [t:protean] [t:AoE] fired during the thunder variant of [a:33108] or [a:33157].
-    attack: spread
-    target: raid
+    variations: [spread on raid]
     type: magic
     damage: 57000
   33119:  # Archaic Rockbreaker
@@ -120,81 +120,77 @@ actions:
       A four-step mechanic. [boss] punches the center of the arena, knocking all players away from a [t:knockback circle] (see [a:33120]), then hits all supports with a 2-person rock stack, inflicting [s:2941]. The initial punch itself spawns eight [a:19148]-like cracks, though only four are initially lit. Once those lights reach the end of the cracks, they explode and spawn the remaining four. During this mechanic, [boss] casts and executes another mechanic.
       The knockback portion of the mechanic essentially resolves itself. Party Finder generally uses [t:color partners] to find the correct marker to go to at the start of the mechanic: if your marker has a wall behind it, you stay there; otherwise, you move to whichever marker has the same color as yours. This both ensures that you will get knocked into a wall (as the knockback is too far to survive otherwise) and that you'll be with your [a:33108] partner.
       After being knocked back, make sure you and your partner are on the same page about subsequent movement. For instance, if one person uses a gapcloser to dash back into the boss while the other person remains at the wall, one of you will die to the stack.
-    attack: mech
-    target: roles
+    variations: [mech on roles]
     type: magic
     damage: 58000
   33120:  # Shockwave
     description: The knockback executed during [a:33119]. Deals minimal damage but knocks players into the death wall, unless they get knocked into an ice wall.
-    attack: knockback
+    variations: [knockback]
     type: physical
     damage: 10000
   33129:
     name: Rear Combination
     description: "[boss] [t:stores] a half-arena cleave behind him, which he will execute during [a:33315]."
-    attack: cleave
+    variations: [cleave]
     type: physical
   33130:
     name: Front Combination
     description: "[boss] [t:stores] a half-arena cleave in front of him, which he will execute during [a:33315]."
-    attack: cleave
+    variations: [cleave]
     type: physical
   33133:  # Archaic Demolish
     description: "Two 4-person stack rocks hit each healer, inflicting [s:2941]. This stack can be easily survived as a 3-stack with minimal mitigation, or even as a 2-stack with average mitigation."
-    attack: stack
-    target: healers
+    variations: [stack on healers]
     type: magic
     damage: 74000
     fade: true
   33135:  # Ascendant Fist
     description: "[boss] uppercuts the main target, dealing heavy damage and applying both [s:2944] and [s:2940]. The latter forces a tankswap, as [boss]'s auto-attacks are physical in this phase."
-    attack: tb
-    target: MT
+    minimal-description: "[boss] hits the main target for high damage and applies vulnerability, forcing a tankswap."
+    variations: [tb on MT]
     type: physical
     damage: 128000
     fade: true
   33136:  # Charybdis
     description: Summons four tornados on the four cardinals of the arena. Stepping into one applies [s:3706].
-    attack: mech
+    variations: [mech]
     fade: true
   33138:  # Comet
     description: Places four comets on the intercardinals of the arena, between the tornadoes. Two of them will start out cracked. Each impact site will deal a moderate amount of proximity damage, so the party should stack in the center of the arena.
       After they have spawned, two comets will appear whole, while two will appear cracked. If a comet takes any damage during this phase, its health state will be reduced by one (to "cracked" or, if it's already cracked, destroyed). The two "whole" comets must not take any damage during this phase, or a wipe is guaranteed.
-    attack: proximity
-    type: magic
+    variations: [proximity]
+    type: physical
     damage: 76000
   33139:  # Comet Impact
     description: This is the damage instance of [a:33138]s hitting the ground.
-    attack: proximity
+    variations: [proximity]
     type: magic
     damage: 19000
     fade: true
   33140:  # Burst
     description: Happens after a [a:33138] is reduced to 0 health states. After a short delay it explodes, dealing huge damage to everything around it. Note that, if the comet is reduced *below* zero health states before it can complete [a:33140] (such as when [a:33141] hits an already damaged comet), it will *skip* [a:33140] and explode immediately. This will not deal any damage, but will prevent players from using damaged comets for cover during [a:33141].
-    attack: chariot
+    variations: [chariot]
     type: magic
   33141:  # Ecliptic Meteor
     description: "[boss] targets a random whole comet (or a damaged one if no whole ones remain) and telegraphs it with a black cross above it. An ecliptic meteor now begins descending onto this comet. The party must stack behind the remaining whole comet, avoiding line of sight with the targeted comet. If no other whole comets remain, a wipe is guaranteed, as [a:33141] deals **two** health states of damage to each comet. If a comet is \"overkilled\" in this manner, it will explode instantly rather than exploding after [a:33140], which means players cannot use it to avoid line of sight of the targeted comet. If any player is in line of sight of the targeted comet, [a:33141] deals ten million damage to them."
-    attack: los
+    variations: [los]
     type: magic
     damage: 9999999
   33143:  # Beastly Bile
     description: "[Stores](t:stores) a poison 4-person stack marker on the farthest player from [boss] and applies [s:3323] to all players hit. The stack is executed at the same time as the [a:33145] cast resolves. If the stack hits any of the comets, their health state is reduced by one. Due to limited space in the arena, the stack should be placed on one of the two cracked comets."
-    attack: stack
-    target: farthest
+    variations: [stack on farthest]
     type: magic
     damage: 46000
   33145:  # Thunderbolt
     description: Launches conal attacks at the closest 4 players, originating from [boss], and applies [s:2095]. If a cone hits any of the comets, its health state is reduced by one, which may destroy it if it is already cracked. [a:33143] resolves at the same time.
 
       To avoid damaging any comets, the cones should be aimed into the tornados. The lines on each cardinal and intercardinal assist with positioning.
-    attack: spread
-    target: closest
+    variations: [spread on closest]
     type: magic
     damage: 60000
   33148:  # Levinstrike Summoning
     description: Summons four thunder orbs in front of the four ice walls. These will become relevant during [a:33149].
-    attack: mech
+    variations: [mech]
     fade: true
   33149:  # Scrambled Succession
     description: |
@@ -221,38 +217,35 @@ actions:
           For the numbered players, towers resolve as normal (*6* and *8* just head into whichever towers first appear). The [a:33152] players (*2* and *4*) treat this mechanic exactly the same as the [a:33155] players, but on the opposite side; so *2* will plant at the edge between the *5* and *7* orbs, then swap with *4* once their [a:33152] resolves.
           After the first two turns, the party switches sides: the numbered players will now go to the [a:33155] side (which will now have no orbs left) and the [a:33155]s will resolve their mechanic where the [a:33152]s previously resolved theirs, and vice-versa.
           The benefit of this strategy is that, aside from finding the initial positions, you do not need to remember the direction of rotation at all. The downside is that there is a far greater amount of movement than in Oppo, which may cause problems for abilities that accrue resources and require you to stand still like [a:7497] or [a:24387].
-    attack: bigmech
-    target: numbered
+    variations: [bigmech on numbered]
   33152:  # Firemeld
     description: "[boss] dashes to a target and blows them up in a fire tornado. Happens during [a:33149]. It deals more damage the *less* distance [boss] dashes. To reduce damage to survivable levels, the targeted player should be as far away from [boss]'s initial position as possible."
-    attack: distance
-    target: numbered
+    variations: [distance on numbered]
     type: magic
     damage: 53000
   33153:  # Shock
     description: This is the damage instance of players soaking towers during [a:33149].
-    attack: towers
+    variations: [towers]
     type: magic
     damage: 23000
   33155:  # Icemeld
     description: These are the enormous [t:AoE]s indicated by blue markers during [a:33149] and [a:33211].
-    attack: spread
+    variations: [spread]
     type: magic
     damage: 70000
   33157:  # Two Minds
     description: "Identical to [a:33108] except for one thing: [a:33108] executes both the telegraph for the empowered element and the mechanic with a significant delay *after* the cast finishes, while [a:33157] shows the element *during* the cast and executes the mechanic immediately at the end of the cast. To make up for this, [a:33157] has a longer cast time."
-    attack: [stack, spread]
-    target: [roles, raid]
+    variations: [stack on roles, spread on raid]
     type: magic
   33158:  # Beastly Fury
     description: Raidwide inflicting moderate damage.
-    attack: raidwide
+    variations: [raidwide]
     type: magic
     fade: true
   33162:  # Disintegration
     description: Instantly kills all players.
     damage: 9999999
-    attack: enrage
+    variations: [enrage]
     type: dark
   33211:
     name: Chimeric Succession
@@ -266,39 +259,36 @@ actions:
       lc2-nenw:
         name: Northeast/Northwest
         description: This strategy places the [a:33155] on the north side of the arena and the party stack on the south side.
-    attack: bigmech
-    target: numbered
+    variations: [bigmech on numbered]
   33315:  # Swinging Kick
     description: Executes the previously stored [a:33129] or [a:33130]. Note that this does *not* inflict [s:2911] but *does* inflict [s:2944]. This means that it is better to be hit by this than by [a:33336] or [a:33337].
-    attack: cleave
+    variations: [cleave]
     type: physical
     fade: true
   33336:  # Inside Roundhouse
     description: A [t:chariot] centered on the boss, leaving only the outside of the arena safe. Being hit by this inflicts [s:2911].
-    attack: chariot
+    variations: [chariot]
     type: physical
   33337:  # Outside Roundhouse
     description: A [t:dynamo] centered on the boss, leaving only [boss]'s hitbox safe. Being hit by this inflicts [s:2911].
-    attack: donut
+    variations: [donut]
     type: physical
   34702:
     name: Front Firestrikes
     description: Similar to [a:33130], [t:stores] a frontal [a:33315] that will be executed after a [a:34708]. After [a:34708], the boss turns toward the target it just jumped on, allowing that player to face [boss] into the wall to ensure the [a:33155] players can avoid the [a:33315].
-    attack: distance
+    variations: [distance on random]
     type: magic
-    target: random
   34703:
     name: Rear Firestrikes
-    description: Similar to [a:33130], [t:stores] a rear [a:33315] that will be executed after a [a:34708]. After [a:34708], the boss turns toward the target it just jumped on, allowing that player to face [boss] into the center of the arena to ensure the [a:33155] players can avoid the [a:33315].
-    attack: distance
+    description: Similar to [a:33129], [t:stores] a rear [a:33315] that will be executed after a [a:34708]. After [a:34708], the boss turns toward the target it just jumped on, allowing that player to face [boss] into the center of the arena to ensure the [a:33155] players can avoid the [a:33315].
+    variations: [distance on random]
     type: magic
-    target: random
   34708:  # Pyremeld
     description: |
       [boss] dashes to a target and blows them up in a fire tornado. Happens during [a:33211]. It deals more damage the *less* distance [boss] dashes. To reduce damage to survivable levels, the targeted player should be as far away from [boss]'s initial position as possible.
       This attack is almost the same as [a:33152], but there are a few differences. For one, [a:34708] is a 4-person stack. Not stacking drastically increases the damage dealt. The actual damage and falloff numbers are also different, maxing out at less distance than [a:33152].
       [a:34708] has a damage fall-off of about 12,500 damage per yalm, maxing out at 22y. If the boss is kept centered, the maximum achievable distance to the boss if one is all the way at the wall is about 19y, which still deals about 100,000 damage. It is therefore recommended for the main tank to pull the boss at least 3y to the [a:33155] side at the start of the mechanic, to allow the party to stack at least 22y away from the boss. Be aware that you shouldn't be *all* the way at the wall, to allow you to bait the subsequent [a:33315] into the wall if [boss] used [a:34702] before.
-    attack: distance
+    variations: [distance]
     type: magic
     damage: 53000
 timeline:
@@ -313,20 +303,17 @@ timeline:
   - at: 54762
     id: 33108
     description: "[boss] channels ice and fire, requiring partner stacks in either in the inner or middle circle."
-    attack: stack
-    target: roles
+    variations: [stack on roles]
     strategies: [dualspell-fire-l, dualspell-fire-s]
   - at: 67909
     id: 33108
     description: "[boss] channels ice and thunder, requiring [t:protean] positions in either the inner or middle circle."
-    attack: spread
-    target: raid
+    variations: [spread on raid]
     strategies: [dualspell-thunder-l, dualspell-thunder-s]
   - at: 81035
     id: 33108
     description: "[boss] channels ice and fire, requiring partner stacks. Whichever element [boss] chose to enhance in the first Ice and Fire, this will be the opposite element."
-    attack: stack
-    target: dps
+    variations: [stack on dps]
     strategies: [dualspell-fire-l, dualspell-fire-s]
   - at: 109933
     id: 33048
@@ -338,6 +325,8 @@ timeline:
     id: 33119
     children-minimal: true
     children:
+    - at: 140805
+      id: 33120
     - at: 148959
       id: 33130
       link: or
