--- a/raids/p5s.yaml
+++ b/raids/p5s.yaml
@@ -58,8 +58,9 @@ actions:
     variations: [tb on MT]
     damage: 71200
     type: magic
-    description: High-damage tankbuster. Inflicts [s:2940] and [s:3390]. Immediately follows up with [a:30794], which deals physical damage and thus requires a tankswap.
-    note: This hit of the tankbuster is an [t:AoE]. Stay away from the main tank during this cast!
+    description: |
+      High-damage tankbuster. Inflicts [s:2940] and [s:3390]. Immediately follows up with [a:30794], which deals physical damage and thus requires a tankswap.
+      **Note that this hit of the tankbuster is an [t:AoE]. Stay away from the main tank during this cast!**
   30794:  # Toxic Crunch
     variations: [tb on MT]
     damage: 76700
@@ -75,7 +76,8 @@ actions:
   30477:  # Scatterbait
     type: magic
     description: High-damage raidwide that inflicts [s:2911] on every living party member.
-  Caustic Pools:
+  caustic-pools:
+    name: Caustic Pools
     description: |
       Spawns 4 caustic pools on the circular engravings in the arena floor – two on the inside, two on the outside. 10 orbs slowly encircle the puddle. After the tenth orb appears, the puddle will "resolve". At that time, there must be two players inside the puddle or [a:30476] will hit the closest player to the puddle, likely killing them and anyone nearby, and spawning a [n:11441] which will begin to cast [a:30477].
       Entering the puddle inflicts [s:3407], so it is recommended to stand on the outside of the pool and only enter your designated pool when there are only 1 or 2 missing orbs around the pool.
@@ -90,8 +92,9 @@ actions:
     name: Double Rush
     damage: 58000
     type: physical
-    description: \[boss] faces one of two directions and rushes the arena twice, applying a knockback and heavy damage to anything in its path. Since [boss] always starts in the center, the first rush can and should be avoided by simply standing behind [boss]. The second rush cannot be avoided and should be mitigated. You can use [a:7548] and [a:7559] to negate the knockback.
-    note: This attack forces downtime on melee players. With good ping, you may be able to get a [t:GCD] in as [boss] rushes past the second time, but your [t:GCD] may easily be [ghosted](t:ghosting).
+    description: |
+      [boss] faces one of two directions and rushes the arena twice, applying a knockback and heavy damage to anything in its path. Since [boss] always starts in the center, the first rush can and should be avoided by simply standing behind [boss]. The second rush cannot be avoided and should be mitigated. You can use [a:7548] and [a:7559] to negate the knockback.
+      This attack forces downtime on melee players. With good ping, you may be able to get a [t:GCD] in as [boss] rushes past the second time, but your [t:GCD] may easily be [ghosted](t:ghosting).
   30488:  # Venom Rain
     damage: 64000
     type: magic
@@ -141,12 +144,14 @@ actions:
       In Savage, this attack is only ever used in combination with a ruby wall, so stay away from [boss] during this cast.
   30482:
     name: Tail to Claw
-    description: "Uses the following sequence of attacks: [a:30481] → 7 hits of [a:30479] (or: get in front → get behind)."
-    note: Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind him just as [a:30481] comes out.
+    description: |
+      Uses the following sequence of attacks: [a:30481] → 7 hits of [a:30479] (or: get in front → get behind).
+      Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind him just as [a:30481] comes out.
   30478:
     name: Claw to Tail
-    description: "Uses the following sequence of attacks: 7 hits of [a:30479] → [a:30481] (or: get behind → wait → get in front). The last hit of the [a:30479] sequence is the double claw finisher. This is your cue to switch sides, as [a:30481] will hit the rear immediately after, with no additional cast time."
-    note: Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind it just as (or even *before*) the last hit of [a:30479] comes out.
+    description: |
+      Uses the following sequence of attacks: 7 hits of [a:30479] → [a:30481] (or: get behind → wait → get in front). The last hit of the [a:30479] sequence is the double claw finisher. This is your cue to switch sides, as [a:30481] will hit the rear immediately after, with no additional cast time.
+      Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind it just as (or even *before*) the last hit of [a:30479] comes out.
   30793:  # Devour
     description: "[boss] lowers itself to all fours and prepares to "
   30497:  # Sonic Shatter
@@ -172,7 +177,7 @@ timeline:
   - at: 58000
     id: 30794
   - at: 85000
-    id: Caustic Pools
+    id: caustic-pools
   - at: 89000
     id: 30493
   - at: 96000
