--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -16,15 +16,15 @@ description: >
 status:
   lightning-vuln:  # Lightning Resistance Down II
     id: 2095
-    duration: 10000
+    duration: 9960
     description: Makes any lightning damage received lethal.
   fire-vuln:  # Fire Resistance Down II
     id: 2098
-    duration: 10000
+    duration: 9960
     description: Makes any fire damage received lethal.
   wind-vuln:  # Wind Resistance Down II
     id: 2096
-    duration: 10000
+    duration: 9960
     description: Makes any wind damage received lethal.
   damage-down:  # Damage Down
     id: 2911
@@ -36,6 +36,7 @@ status:
     description: Makes any physical damage received lethal.
   magic-vuln:  # Magic Vulnerability Up
     id: 2941
+    duration: [1960, 7000, 8960, 9960, 12960, 15960, 18960]
     description: Makes any magic damage received lethal.
   concussion:  # Concussion
     id: 2944
@@ -43,7 +44,7 @@ status:
     description: A heavy [t:DoT] inflicted by [a:ascendant-fist] that ticks 4 times for approximately 31,000 damage per tick.
   dark-vuln:  # Dark Resistance Down II
     id: 3323
-    duration: 10000
+    duration: 9960
     description: Makes any dark magic damage received lethal.
   chimeric:  # Chimeric Soul
     id: 3545
